--- a/.eslintrc
+++ b/.eslintrc
@@ -1,15 +1,17 @@
 {
   "root": true,
   "parser": "@typescript-eslint/parser",
-  "plugins": ["@typescript-eslint", "no-loops"],
+  "plugins": ["@typescript-eslint", "no-loops", "prettier"],
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/eslint-recommended",
-    "plugin:@typescript-eslint/recommended"
+    "plugin:@typescript-eslint/recommended",
+    "prettier"
   ],
   "rules": {
     // disallow console.log in our code
-    "no-console": 1, // throw error!
-    "no-loops/no-loops": 2
+    "no-console": 0, // throw error!
+    "no-loops/no-loops": 2,
+    "prettier/prettier": 2
   }
 }
